Update small and large straight rules in index.html

--- a/index.html
+++ b/index.html
@@ -336,8 +336,8 @@
                 twoPair: "Two Pairs", twoPair_rule: "Sum of two different pairs.",
                 threeKind: "3 of a Kind", threeKind_rule: "Sum of three same dice.",
                 fourKind: "4 of a Kind", fourKind_rule: "Sum of four same dice.",
-                smallStr: "Small Str.", smallStr_rule: "Seq of 4. Score 15 or 30.",
-                largeStr: "Large Str.", largeStr_rule: "Seq of 5. Score 20 or 40.",
+                smallStr: "Small Str.", smallStr_rule: "Seq of 1-2-3-4-5. Score 15.",
+                largeStr: "Large Str.", largeStr_rule: "Seq of 2-3-4-5-6. Score 20.",
                 fullHouse: "Full House", fullHouse_rule: "3 of one + 2 of another.",
                 chance: "Chance", chance_rule: "Sum of all 5 dice.",
                 yatzy_cat: "Yatzy", yatzy_rule: "All 5 same. 50 or 0.",
@@ -389,8 +389,8 @@
                 twoPair: "Kaksi paria", twoPair_rule: "Kahden eri parin summa.",
                 threeKind: "Kolmoisluku", threeKind_rule: "Kolmen saman silmäluvun summa.",
                 fourKind: "Neloisluku", fourKind_rule: "Neljän saman silmäluvun summa.",
-                smallStr: "Pieni suora", smallStr_rule: "4 peräkkäistä. 15 tai 30.",
-                largeStr: "Iso suora", largeStr_rule: "5 peräkkäistä. 20 tai 40.",
+                smallStr: "Pieni suora", smallStr_rule: "4 peräkkäistä. 15.",
+                largeStr: "Iso suora", largeStr_rule: "5 peräkkäistä. 20.",
                 fullHouse: "Täyskäsi", fullHouse_rule: "3 samaa + 2 samaa.",
                 chance: "Sattuma", chance_rule: "Kaikkien 5 nopan summa.",
                 yatzy_cat: "Yatzy", yatzy_rule: "Kaikki 5 samaa. 50 tai 0.",
